--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
   "scripts": {
     "build": "nest build",
     "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
+    "test": "jest --collect-coverage",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
@@ -40,7 +41,7 @@
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
+    "@nestjs/testing": "^9.4.3",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.0",
     "@types/node": "18.15.11",
@@ -69,13 +70,20 @@
       "json",
       "ts"
     ],
-    "rootDir": "src",
+    "moduleDirectories": ["node_modules", "<rootDir>"],
+    "coveragePathIgnorePatterns": ["@generated/.*", "^.*.module.ts$", "<rootDir>/src/main.ts", "<rootDir>/src/auth/auth.guard.ts"],
+    "modulePaths": ["<rootDir>/src/"],
+    "moduleNameMapper": {
+      "^src/(.*)$": "<rootDir>/src/$1",
+      "/^config\/(.*)$/": "<rootDir>/config/$1"
+    },
+    "rootDir": ".",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
     "collectCoverageFrom": [
-      "**/*.(t|j)s"
+      "src/**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
