--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@apollo/server": "^4.9.1",
     "@nestjs/apollo": "^12.0.7",
+    "@nestjs/cli": "^10.1.11",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^9.0.0",
@@ -39,7 +40,6 @@
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.4.3",
     "@types/express": "^4.17.13",
@@ -70,12 +70,22 @@
       "json",
       "ts"
     ],
-    "moduleDirectories": ["node_modules", "<rootDir>"],
-    "coveragePathIgnorePatterns": ["@generated/.*", "^.*.module.ts$", "<rootDir>/src/main.ts", "<rootDir>/src/auth/auth.guard.ts"],
-    "modulePaths": ["<rootDir>/src/"],
+    "moduleDirectories": [
+      "node_modules",
+      "<rootDir>"
+    ],
+    "coveragePathIgnorePatterns": [
+      "@generated/.*",
+      "^.*.module.ts$",
+      "<rootDir>/src/main.ts",
+      "<rootDir>/src/auth/auth.guard.ts"
+    ],
+    "modulePaths": [
+      "<rootDir>/src/"
+    ],
     "moduleNameMapper": {
       "^src/(.*)$": "<rootDir>/src/$1",
-      "/^config\/(.*)$/": "<rootDir>/config/$1"
+      "/^config/(.*)$/": "<rootDir>/config/$1"
     },
     "rootDir": ".",
     "testRegex": ".*\\.spec\\.ts$",
